--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -749,15 +749,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## My modification works as intended!"
+    "## My modification works as intended! Success!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -908,15 +901,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-56-9ec94bd5d92d>, line 3)",
+     "evalue": "unexpected EOF while parsing (<ipython-input-105-9ec94bd5d92d>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-56-9ec94bd5d92d>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    final_string = ' '.join(reversed(text.split()).capitalize()\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-105-9ec94bd5d92d>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    final_string = ' '.join(reversed(text.split()).capitalize()\u001b[0m\n\u001b[0m                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
@@ -935,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -952,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -980,7 +973,7 @@
        "'Home am i'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +994,7 @@
        "'Ready are we'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,24 +1026,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "def almost_there(n):\n",
-    "    pass"
+    "## My first attempt:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 89,
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "def almost_there(n):\n",
+    "    if abs(100 - n) <= 10: \n",
+    "        return \"Almost there!\"\n",
+    "    elif abs(200 - n) <= 10: \n",
+    "        return \"Almost there!\"\n",
+    "    else:\n",
+    "        return \"Ugh Way off. \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Almost there'"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(104)"
@@ -1058,11 +1070,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ugh Way off. '"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(150)"
@@ -1070,14 +1091,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Almost there!'"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(209)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Success on my first attempt!!"
    ]
   },
   {
@@ -1102,23 +1139,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 101,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def has_33(nums):\n",
-    "    pass"
+    "    if (3) in nums:\n",
+    "        return \"3 is next to 3!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3 is next to 3!'"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([1, 3, 3])"
@@ -1126,9 +1171,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3 is next to 3!'"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([1, 3, 1, 3])"
@@ -1136,9 +1192,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3 is next to 3!'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([3, 1, 3])"
